fix cards text color issue while using dark mode

--- a/src/components/common/cards/cards.scss
+++ b/src/components/common/cards/cards.scss
@@ -4,4 +4,5 @@
   row-gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 0.3fr));
   justify-content: space-evenly;
+  color: var(--sub-background-color);
 }
