--- a/src/components/common/cards/todo-card/todo-card.scss
+++ b/src/components/common/cards/todo-card/todo-card.scss
@@ -33,7 +33,6 @@
     }
   }
 
-  color: var(--sub-background-color);
   .card-body {
     p {
       font-size: small;
